2007-05-21  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/gossip-group-chat.c:
	* libempathy-gtk/gossip-group-chat.h:
	* libempathy-gtk/gossip-private-chat.c:
	* libempathy-gtk/gossip-private-chat.h:
	* libempathy-gtk/gossip-group-chat.glade:
	* libempathy-gtk/Makefile.am:
	* src/empathy-chat-main.c:
	* libempathy/empathy-tp-contact-list.c:
	* libempathy/gossip-telepathy-group.c:
	* libempathy/gossip-telepathy-group.h:
	* libempathy/empathy-tp-chatroom.c:
	* libempathy/empathy-tp-chatroom.h: Implementing basic chatroom support.
	Actually it works only if we get invited in a chatroom.

2007-05-20  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/gossip-chat-view.c: Correctly remember the contact
	who sent last message.

2007-05-20  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/gossip-chat-view.c: Correctly remember if last message
	comes from the self contact or another.

2007-05-20  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/gossip-contact-list-model.c:
	* libempathy-gtk/gossip-contact-list-model.h: Removed.
	* libempathy-gtk/gossip-contact-list-view.c:
	* libempathy-gtk/gossip-contact-list-view.h: Added.

2007-05-20  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/gossip-contact-list-store.c: Set COL_NAME earlier like
	that it can directly be sorted.
	* data/empathy.schemas.in: s/gossip/empathy/

2007-05-20  Xavier Claessens  <xclaesse@gmail.com>

	* configure.ac: Bump version to 0.5

2007-05-20  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/gossip-contact-list-store.c: Allow to set custom 
	function for getting groups of a contact. Make possible to have groups
	for presence or role/affiliation in chatroom for example.
	* libempathy-gtk/gossip-contact-list-store.h: Allow to set custom
	function to handle DnD of contact. Useful when a custom function is set
	for groups.
	* src/empathy-chat-main.c: Minor fix.
	* TODO:
	* po/POTFILES.in: Updated.

2007-05-19  Xavier Claessens  <xclaesse@gmail.com>
